# MCP-ChatBot

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml  mcp_prompts.yaml
examples/: embedding_example.rs  obsidian_processor.rs
scripts/: build_qdrant.sh  convert_model.py  download_model.sh  setup_qdrant.sh
src/: config.rs  conversation.rs  doc_processor.rs  document_processor.rs  embedding.rs  file_server.rs  history.rs  lib.rs  llm_client.rs  main.rs  mcp_prompts.yaml  mcp_server.rs  protocol.rs  rag_server.rs  servers_config.json  sqlite_server.rs  stdio_server.rs  utils.rs  vector_db.rs  vector_store.rs  whisper_server.rs
src/src/: config.rs  history.rs  main.rs
tests/: embedding_test.rs  main_test.rs  rag_server_test.rs  sqlite_test.rs  vector_db_test.rs
