[package]
name = "mcp-chatbot"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
env_logger = "0.10"
log = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.32"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rustyline = "12.0.0"
tempfile = "3.8"
colored = "2.1.0"
whisper-rs = "0.10.0"
cpal = "0.15.2"
ringbuf = "0.3.3"
hound = "3.5.1"
qdrant-client = "1.7"
tokenizers = "0.15.2"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-linalg = "0.16"
ndarray-rand = "0.14"
async-trait = "0.1.77"
uuid = { version = "1.7.0", features = ["v4"] }
regex = "1.10.3"
unicode-normalization = "0.1.24"
lru = "0.12.1"
dashmap = "5.5.3"
rand = "0.8"
rand_distr = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
shellexpand = "3.1"
md5 = "0.7"
tch = { version = "0.17.0", features = ["download-libtorch"] }
rust-bert = { version = "0.23.0", features = ["default"] }
rayon = "1.8"
thiserror = "1.0"

[build-dependencies]
tch = { version = "0.17.0", features = ["download-libtorch"] }

[[example]]
name = "embedding_example"
path = "examples/embedding_example.rs"

[[example]]
name = "obsidian_processor"
path = "examples/obsidian_processor.rs"

[[test]]
name = "sqlite_test"
path = "tests/sqlite_test.rs"

[[test]]
name = "vector_db_test"
path = "tests/vector_db_test.rs"

[[test]]
name = "embedding_test"
path = "tests/embedding_test.rs"

[dev-dependencies]
tokio-test = "0.4.3"
env_logger = "0.10"
